cluster/apps/immich/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  type: ExternalName
  externalName: 10.0.1.168
  ports:
  - name: http
    port: 3001
    protocol: TCP
    targetPort: 3001
